<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:layoutDirection="ltr">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:id="@+id/photo_view_pager" >

    </ImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cutout_safe_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/send_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/ic_baseline_add_circle_24"
            android:padding="15dp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_select" />

        <ImageButton
            android:id="@+id/back_button"
            android:contentDescription="@string/back_button_alt"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="@dimen/margin_xsmall"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_arrow_back_ios_white" />

        <ImageButton
            android:id="@+id/share_button"
            android:contentDescription="@string/share_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_share" />

        <ImageButton
            android:id="@+id/delete_button"
            android:contentDescription="@string/delete_button_alt"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_small"
            android:layout_width="@dimen/round_button_small"
            android:layout_height="@dimen/round_button_small"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            app:srcCompat="@drawable/ic_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>