<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.fragment.RegisterInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.04" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline40"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.96" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/as_ciate_con"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                android:id="@+id/comfirm_code_peru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/nameApp"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/complemento2"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/nameApp"
                android:textColor="@color/gris_4"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:fontFamily="@font/montserrat_light"
                android:textSize="18sp"
                android:textColor="@color/gris_4"
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="15dp"
                android:text="es una plataforma"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/desc_dalo_register"
                android:textColor="@color/gris_4"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/black"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView11"></LinearLayout>

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/comienza"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/linearLayout"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewOne"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView12">

                <EditText
                    android:id="@+id/et_register_fullname_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:ems="10"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:fontFamily="@font/montserrat"
                    android:hint="Nombres Completos."

                    android:inputType="textCapWords"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewThree"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/cb_register_check">

                <EditText
                    android:visibility="gone"
                    android:id="@+id/et_register_name_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="Nombre de la Empresa "
                    android:inputType="textAutoComplete"

                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewTwo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/cardViewOne">

                <EditText
                    android:id="@+id/et_register_dni_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="DNI"
                    android:inputType="number"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewFour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline40"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/cardViewThree">

                <EditText
                    android:id="@+id/et_register_ruc_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:ems="10"
                    android:visibility="gone"
                    android:fontFamily="@font/montserrat"
                    android:hint="RUC"
                    android:inputType="number"
                    android:padding="10dp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="Fotografía."
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/cardViewFour" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_light"
                android:text="*Obligatorio"
                android:textColor="@color/gris_3"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewten"
                app:cardElevation="1dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="20dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView14" >

                <ImageView
                    android:scaleType="centerCrop"
                    android:padding="5dp"
                    android:id="@+id/img_rider_fr"
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/terminos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat_light"
                android:text="@string/desc_condiciones"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cargarfoto" />


            <Button


                android:id="@+id/btn_register_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_black"
                android:paddingHorizontal="50dp"
                android:paddingVertical="5dp"
                android:text="ENVIAR"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/terminos" />

            <TextView
                android:id="@+id/cargarfoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_light"
                android:paddingHorizontal="5dp"
                android:textSize="10sp"
                android:text="Cargar Foto"
                app:layout_constraintEnd_toEndOf="@+id/cardViewten"
                app:layout_constraintTop_toBottomOf="@+id/cardViewten" />

            <CheckBox

                android:id="@+id/cb_register_check"
                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/black"
                android:checked="false"
                android:text="Registrarme como empresa"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline7"
                app:layout_constraintTop_toBottomOf="@+id/cardViewTwo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>




</FrameLayout>